--- a/ReHouse.FrontEnd/Views/Map/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Map/Index.cshtml
@@ -20,21 +20,22 @@
                 <li>@Html.ActionLink("- Купить квартиру", "flat", "sale")</li>
                 <li>@Html.ActionLink("- Купить дом", "house", "sale")</li>
                 <li>@Html.ActionLink("- Купить участок", "homestead", "sale")</li>
-                <li>@Html.ActionLink("- Купить коммерческую", "commerce", "sale")</li>
+                <li>@Html.ActionLink("- Купить коммерцию", "commerce", "sale")</li>
             </ul>
         </li>
         <li>
-            <a> 3. Аренда</a>
+            <a>3. Аренда</a>
             <ul>
                 <li>@Html.ActionLink("- Снять квартиру", "flat", "rent")</li>
                 <li>@Html.ActionLink("- Снять дом", "house", "rent")</li>
-                <li>@Html.ActionLink("- Снять участок", "homestead", "rent")</li>
+                <li>@Html.ActionLink("- Снять коммерцию", "commerce", "rent")</li>
+                <li>@*@Html.ActionLink("- Снять участок", "homestead", "rent")*@</li>
             </ul>
         </li>
-        <li>@Html.ActionLink("4. Новостройки", "index", "newbuilding")</li>
+        <li>@Html.ActionLink("4. Новострои", "index", "newbuilding")</li>
         <li>@Html.ActionLink("5. Менеджеры", "index", "manager")</li>
         <li>
-            <a> 6. О нас</a>
+            <a>6. О нас</a>
             <ul>
                 <li><a href="#">- О компании</a></li>
                 <li><a href="#">- Вакансии агентства</a></</li>
@@ -42,6 +43,6 @@
         </li>
         <li>@Html.ActionLink("7. Новости", "index", "news")</li>
         <li>@Html.ActionLink("8. Отзывы", "index", "feedback")</li>
-        <li><a href="#"> 9. Обратная связь</a></li>
+        <li><a href="#">9. Обратная связь</a></li>
     </ol>
 </div>
