--- a/ReHouse.FrontEnd/Views/Home/About.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/About.cshtml
@@ -1,7 +1,9 @@
-﻿
+﻿@using ReHouse.Utils.DataBase.Common
+@{
+    List<PageText> texts = ViewBag.PageTexts as List<PageText>;
+}
 @section scripts {
     @Scripts.Render("~/bundles/fancybox")
-
     <script type="text/javascript">
         $(document).ready(function () {
             $("a.plan").fancybox();
@@ -16,17 +18,18 @@
         <p>/</p>
         <pre> </pre>
         @Html.ActionLink("О компании", "about", "home")
-
     </div>
 </div>
-
 <div class="about_company">
-    <h2>О компании</h2>
-    <p>Rehouse — международная риэлторская инвестиционная компания с мировым именем и сетью филиалов во многих странах мира теперь в Украине, г.Одесса.
-        Команда профессионалов поможет в приобретении или продаже всех видов недвижимости в любой точке планеты, по лучшим ценам и в кратчайшие сроки.
-        Помогаем всем, кто интересуется выгодными сделками на рынке жилых и коммерческой объектов. Ассортимент объектов: от маленьких уютных квартир до элитной недвижимости позволяет найти вариант, о которой Вы мечтали.
-        Агенты Rehouse Odessa ориентируются на заключение эксклюзивных договоров по продаже недвижимости, благодаря этому наши клиенты получают результат быстро, качественно и надежно.
-    Наша команда стремится создавать длительные отношения с клиентами и повторное обращение их радует и вдохновляет нас. Мы воплотим вашу мечту в реальность!</p>
+    @if (texts != null)
+    {
+        var main = texts.FirstOrDefault(x => x.TextBlockName == "Main");
+        if (main != null)
+        {
+            <h2>@main.Title</h2>
+            <p>@Html.Raw(main.Description)</p>
+        }
+    }
 </div>
 <div class="photo_company">
     <a class="plan" rel="group" title="Наша команда" href="~/content/images/rehouse10.jpeg"><img src="~/content/images/rehouse10.jpeg" border="0" width="400" height="600" /></a>
@@ -38,6 +41,4 @@
 <div id="mapnovostroy1">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d687.1583056346718!2d30.748138929248427!3d46.45596399869532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c633d959ebd873%3A0xc31a18fbc02e9908!2z0L_RgNC-0YHQv9C10LrRgiDQk9Cw0LPQsNGA0ZbQvdCwLCA2LzUsINCe0LTQtdGB0LAsINCe0LTQtdGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNGX0L3QsA!5e0!3m2!1suk!2sru!4v1492596754853" width="700px" height="350px" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
-
-
 
