--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -170,7 +170,7 @@
             <div class="navigation">
                 <ol>
                     <li>
-                        <a id="">Продажа</a>
+                        <a id="">Покупка</a>
                         <ol>
                             @*<li>@Html.ActionLink("Купить квартиру", "flat", "sale")</li>
                                 <li>@Html.ActionLink("Купить дом", "house", "sale")</li>
@@ -249,7 +249,7 @@
             <span class="third"></span>
         </label>
         <ul class="hidden-menu">
-            <li class="bgh"><a href="" class="bold">Продажа</a></li>
+            <li class="bgh"><a href="" class="bold">Покупка</a></li>
             <ol>
                 <li><a href="~/sale/flat">Купить квартиру</a></li>
                 <li><a href="~/sale/house">Купить дом</a></li>
