--- a/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
@@ -230,7 +230,7 @@
 </div>
 <span class="none">
 
-    <div class="h2novostroy"><h2>Другие Новостройки</h2></div>
+    <div class="h2novostroy"><h2>Другие Новострои</h2></div>
 </span>
 <div class="othernovostroy">
     <ul class="prods" id="data-container">
