--- a/ReHouse.FrontEnd/Views/Shared/Advert/_filters.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Advert/_filters.cshtml
@@ -35,7 +35,7 @@
             {
                 if (ViewBag.Type == AdvertsType.Sale)
                 {
-                    <option value="@Model.Prices[i].Min">от @Model.Prices[i].Min</option>
+                    <option value="@Model.Prices[i].Min">от @Model.Prices[i].Min $</option>
                     @*if (i == 0)
                     {
                     <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
@@ -73,7 +73,7 @@
             {
                 if (ViewBag.Type == AdvertsType.Sale)
                 {
-                    <option value="@Model.Prices[i].Min">до @Model.Prices[i].Min</option>
+                    <option value="@Model.Prices[i].Min">до @Model.Prices[i].Min $</option>
                     @*if (i == 0)
                     {
                         <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
