--- a/ReHouse.FrontEnd/Views/Rent/Commerce.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Commerce.cshtml
@@ -59,7 +59,16 @@
             var main = texts.FirstOrDefault(x => x.TextBlockName == "Main");
             if (main != null)
             {
-                <p>@Html.Raw(main.Description)</p>
+                if (main.Description.Length > 400)
+                {
+                    <div id="text_@main.Id">@Html.Raw(main.Description.Substring(0, 399)) ...</div>
+                    <a onclick="showSeoTextDetails(@main.Id, this);" id="more">Подробнее</a>
+                    <div id="textHidden_@main.Id" style="display:none;">@Html.Raw(main.Description)</div>
+                }
+                else
+                {
+                    <div>@Html.Raw(main.Description)</div>
+                }
             }
         }
         </div>
