--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <meta http-equiv="~/Content-Type" content="text/html; charset=utf-8">
     @if (seo != null)
     {
-        <title>@ViewBag.Title</title>
+        <title>@seo.Title</title>
         <meta property="og:title" content="@seo.Title" />
         <meta name="twitter:title" content="@seo.Title">
         <meta itemprop="name" content="@seo.Title" />
@@ -320,9 +320,9 @@
                         </div>
                         <div class="content1">
                             <h3>@article.Title</h3>
-                            @if (@article.Description.Length > 750)
+                            @if (@article.Description.Length > 400)
                             {
-                                <p id="news_@article.Id">@Html.Raw(article.Description.Substring(0, 749)) ...</p>
+                                <p id="news_@article.Id">@Html.Raw(article.Description.Substring(0, 399)) ...</p>
                             }
                             else
                             {
