--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -13,7 +13,7 @@
     <meta http-equiv="~/Content-Type" content="text/html; charset=utf-8">
     @if (seo != null)
     {
-        <title>@ViewBag.Title</title>
+        <title>@seo.Title</title>
         <meta property="og:title" content="@seo.Title" />
         <meta name="twitter:title" content="@seo.Title">
         <meta itemprop="name" content="@seo.Title" />
@@ -156,6 +156,12 @@
         });
     </script>
     <script>
+        function showSeoTextDetails(id, btn) {
+            $(btn).fadeOut();
+            $('#text_' + id).fadeOut();
+            $('#textHidden_' + id).fadeIn();
+        }
+
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
@@ -349,9 +355,9 @@
                         </div>
                         <div class="content1">
                             <h3>@article.Title</h3>
-                            @if (@article.Description.Length > 750)
+                            @if (@article.Description.Length > 400)
                             {
-                                <p id="news_@article.Id">@Html.Raw(article.Description.Substring(0, 749)) ...</p>
+                                <p id="news_@article.Id">@Html.Raw(article.Description.Substring(0, 399)) ...</p>
                             }
                             else
                             {
